Delete requests for Product and User to return DTO's